cluster/resources/traefik/dashboard-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: core-traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.zonkey-broadnose.ts.net`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
