cluster/resources/traefik/test-whoami.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  namespace: core-networking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami
          image: traefik/whoami:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              cpu: 50m
              memory: 32Mi
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: core-networking
spec:
  selector:
    app: whoami
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  namespace: core-networking
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`test.data-monster.net`)
      kind: Rule
      middlewares:
        - name: authelia-forwardauth
          namespace: core-networking
      services:
        - name: whoami
          port: 80
  tls: {}
